--- a/products.html
+++ b/products.html
@@ -54,79 +54,82 @@
     <script src="js/ng-pattern-restrict.js"></script>
 	</head>
 	<body ng-controller="ctrlCubeShopHomeProducts">
-		<nav class="top-menu">
-			<div class="container">
-				<div class="row">
-					<div class="col-sm-4 hidden-xs">
-						<span class="nav-text">
-							<i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
-						</div>
-						<div class="col-sm-3 text-center"></div>
-						<div class="col-sm-5 text-right hidden-xs">
-							<ul class="right-menu ">
-								<li><a href=""><i class="fas fa-question-circle"></i></a></li>
-								<li class="dropdown">
-									<a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
-								</li>
-								<li class="dropdown">
-									<a class="" href="login.html"> Login/Register </a>
-								</li>
-								<li style="background-color:#048949;"><a  href="cart.html">
-									<i class="fas fa-cart-plus"></i> Cart
-									<span class="badge badge-cart">10</span>
-								</a></li>
-							</ul>
+		<div class="fixed-top">
+			<nav class="top-menu">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-sm-4 hidden-xs">
+							<span class="nav-text">
+								<i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
+							</div>
+							<div class="col-sm-3 text-center"></div>
+							<div class="col-sm-5 text-right hidden-xs">
+								<ul class="right-menu ">
+									<li><a href=""><i class="fas fa-question-circle"></i></a></li>
+									<li class="dropdown">
+										<a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
+									</li>
+									<li class="dropdown">
+										<a class="" href="login.html"> Login/Register </a>
+									</li>
+									<li style="background-color:#048949;"><a  href="cart.html">
+										<i class="fas fa-cart-plus"></i> Cart
+										<span class="badge badge-cart">10</span>
+									</a></li>
+								</ul>
+							</div>
 						</div>
 					</div>
-				</div>
-			</nav>
-			<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-	      <div class="container">
-	        <!--logo -->
-	        <a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
-	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-	          <span class="navbar-toggler-icon"></span>
-	        </button>
-	        <div class="collapse navbar-collapse justify-content-center"  id="navbarsExampleDefault">
-	          <form style="">
-	            <div class="row" style="margin-top:10px;">
-	              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-	                <div class="input-group input-group-sm">
-	                  <input style="border-radius:0;" type="text" class="form-control" aria-label="Small" placeholder="Search...">
-	                  <div class="input-group-append">
-	                    <button type="button" class="btn btn-secondary" style="border-radius:0;">
-	                      <i class="fa fa-search"></i>
-	                    </button>
-	                  </div>
-	                </div>
-	              </div>
-	            </div>
-	            <!-- Links -->
-	            <ul class="navbar-nav m-auto" >
-	              <li class="nav-item">
-	                <a class="nav-link  active" href="index.html">HOME <span class="sr-only">(current)</span></a>
-	              </li>
-	              <li class="nav-item">
-	                <a class="nav-link " href="products.html">PRODUCTS</a>
-	              </li>
-	              <li class="nav-item">
-	                <a class="nav-link" href="#">SERVICES </a>
-	              </li>
-	              <li class="nav-item">
-	                <a class="nav-link" href="#">APPLICATIONS</a>
-	              </li>
-	            </ul>
-	          </form>
+				</nav>
+				<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+		      <div class="container-fluid">
+		        <!--logo -->
+		        <a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
+		        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+		          <span class="navbar-toggler-icon"></span>
+		        </button>
+		        <div class="collapse navbar-collapse justify-content-center"  id="navbarsExampleDefault">
+		          <form style="">
+		            <div class="row" style="margin-top:10px;">
+		              <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+		                <div class="input-group input-group-sm">
+		                  <input style="border-radius:0;" type="text" class="form-control" aria-label="Small" placeholder="Search...">
+		                  <div class="input-group-append">
+		                    <button type="button" class="btn btn-secondary" style="border-radius:0;">
+		                      <i class="fa fa-search"></i>
+		                    </button>
+		                  </div>
+		                </div>
+		              </div>
+		            </div>
+		            <!-- Links -->
+		            <ul class="navbar-nav m-auto" >
+		              <li class="nav-item">
+		                <a class="nav-link " href="index.html">HOME <span class="sr-only">(current)</span></a>
+		              </li>
+		              <li class="nav-item">
+		                <a class="nav-link active" href="products.html">PRODUCTS</a>
+		              </li>
+		              <li class="nav-item">
+		                <a class="nav-link" href="#">SERVICES </a>
+		              </li>
+		              <li class="nav-item">
+		                <a class="nav-link" href="#">APPLICATIONS</a>
+		              </li>
+		            </ul>
+		          </form>
 
 
-	        </div>
-	      </div>
-	    </nav>
+		        </div>
+		      </div>
+		    </nav>
+		</div>
+
 		<main >
 
 			<section class="wrap" >
 				<br>
-				<div class="container ">
+				<div class="container">
 					<div class="">
 						<h3>Products</h3>
 						<hr>
@@ -148,127 +151,141 @@
 							<div class="card card-body bg-light mb-3">
 								<div class="card-header bg-green text-white text-uppercase">Categories</div>
 								<ul class="list-group list-group-flush ">
-									<li class="list-group-item"><a href="category.html">Electronics</a></li>
-									<li class="list-group-item"><a href="category.html">Clothing</a></li>
-									<li class="list-group-item"><a href="category.html">Sports</a></li>
-									<li class="list-group-item"><a href="category.html">Automotive</a></li>
-									<li class="list-group-item"><a href="category.html">Beauty & Health</a></li>
-									<li class="list-group-item"><a href="category.html">Toys, Kids &Baby</a></li>
+									<li class="list-group-item"><a href="#" class=" active">Electronics</a></li>
+									<li class="list-group-item"><a href="#">Clothing</a></li>
+									<li class="list-group-item"><a href="#">Sports</a></li>
+									<li class="list-group-item"><a href="#">Automotive</a></li>
+									<li class="list-group-item"><a href="#">Beauty & Health</a></li>
+									<li class="list-group-item"><a href="#">Toys, Kids &Baby</a></li>
 								</ul>
 
 							</div>
 						</div>
+						<!-- <div class="col">
+							<div class="row">
+								<div class="col-md-4">
+									<div class="card" style="width: 16rem;">
+										<img class="card-img-top" src="img/iphone.png" alt="Card image cap"  width="400" height="200">
+										<div class="card-body">
+											<h5 class="card-title text-center"><a href="details-product.html" title="View Product">Category</a></h5>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="card" style="width: 16rem;">
+										<img class="card-img-top" src="img/headphones.jpg" alt="Card image cap"  width="400" height="200">
+										<div class="card-body">
+											<h5 class="card-title text-center"><a href="details-product.html" title="View Product">Category</a></h5>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="card" style="width: 16rem;">
+										<img class="card-img-top" src="img/camera.jpg" alt="Card image cap"  width="400" height="200">
+										<div class="card-body">
+											<h5 class="card-title text-center"><a href="product.html" title="View Product">Category</a></h5>
+										</div>
+									</div>
+								</div>
+							</div>
+							<br>
+							<div class="row">
+								<div class="col-md-4">
+									<div class="card" style="width: 16rem;">
+										<img class="card-img-top" src="img/disk.png" alt="Card image cap"  width="400" height="200">
+										<div class="card-body">
+											<h5 class="card-title text-center"><a href="details-product.html" title="View Product">Category</a></h5>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="card" style="width: 16rem;">
+										<img class="card-img-top" src="img/laptop.jpeg" alt="Card image cap"  width="400" height="200">
+										<div class="card-body">
+											<h5 class="card-title text-center"><a href="details-product.html" title="View Product">Category</a></h5>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-4">
+									<div class="card" style="width: 16rem;">
+										<img class="card-img-top" src="img/projectors.jpg" alt="Card image cap"  width="400" height="200">
+										<div class="card-body">
+											<h5 class="card-title text-center"><a href="details-product.html" title="View Product">Category</a></h5>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div> -->
 						<div class="col">
 							<div class="row">
-					<div class="col-md-4">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="img/iphone.png" alt="Card image cap"  width="400" height="200">
-							<div class="card-body">
-								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
-								<hr>
-								<div class="row">
-									<div class="col">
-										<p >99.00 $</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="img/headphones.jpg" alt="Card image cap"  width="400" height="200">
-							<div class="card-body">
-								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
-								<hr>
-								<div class="row">
-									<div class="col">
-										<p >99.00 $</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="img/camera.jpg" alt="Card image cap"  width="400" height="200">
-							<div class="card-body">
-								<h5 class="card-title"><a href="product.html" title="View Product">Product title</a></h5>
-								<hr>
-								<div class="row">
-									<div class="col">
-										<p >99.00 $</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<br>
-				<div class="row">
-					<div class="col-md-4">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="img/disk.png" alt="Card image cap"  width="400" height="200">
-							<div class="card-body">
-								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
-								<hr>
-								<div class="row">
-									<div class="col">
-										<p >99.00 $</p>
-									</div>
+								<div class="col-md-12">
+									<ul class="list-group ">
+										<li class="list-group-item">
+											<div class="row">
+												<div class=" col-md-3">
+													<img class="media-object img-rounded img-responsive" src="http://placehold.it/140x140" alt="placehold.it/350x250">
+												</div>
+												<div class="col-md-6">
+													<h5> Name Product </h5>
+													<ul class="list-square">
+														<li>Features 1</li>
+														<li>Features 2</li>
+														<li>Features 3</li>
+													</ul>
+												</div>
+												<div class="col-md-3 text-center">
+													<h4> $13540 </h4>
+												</div>
+											</div>
+										</li>
+										<br>
+										<li class="list-group-item">
 
-								</div>
+												<div class="row">
+													<div class=" col-md-3">
+														<img class="media-object img-rounded img-responsive" src="http://placehold.it/140x140" alt="placehold.it/350x250">
+													</div>
+													<div class="col-md-6">
+														<h5> Name Product </h5>
+														<ul class="list-square">
+															<li>Features 1</li>
+															<li>Features 2</li>
+															<li>Features 3</li>
+														</ul>
+													</div>
+													<div class="col-md-3 text-center">
+														<h4> $13540 </h4>
+													</div>
+												</div>
 
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="img/laptop.jpeg" alt="Card image cap"  width="400" height="200">
-							<div class="card-body">
-								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
-								<hr>
-								<div class="row">
-									<div class="col">
-										<p >99.00 $</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card" style="width: 16rem;">
-							<img class="card-img-top" src="img/projectors.jpg" alt="Card image cap"  width="400" height="200">
-							<div class="card-body">
-								<h5 class="card-title"><a href="details-product.html" title="View Product">Product title</a></h5>
-								<hr>
-								<div class="row">
-									<div class="col">
-										<p >99.00 $</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-							<div class="col-12">
-								<nav aria-label="...">
-									<ul class="pagination" style="padding-top: 10px;">
-										<li class="page-item disabled">
-											<a class="page-link" href="#" tabindex="-1">Previous</a>
 										</li>
-										<li class="page-item"><a class="page-link" href="#">1</a></li>
-										<li class="page-item active">
-											<a class="page-link" href="#">2 <span class="sr-only">(current)</span></a>
+										<br>
+										<li class="list-group-item">
+
+												<div class="row">
+													<div class=" col-md-3">
+														<img class="media-object img-rounded img-responsive" src="http://placehold.it/140x140" alt="placehold.it/350x250">
+													</div>
+													<div class="col-md-6">
+														<h5> Name Product </h5>
+														<ul class="list-square">
+															<li>Features 1</li>
+															<li>Features 2</li>
+															<li>Features 3</li>
+														</ul>
+													</div>
+													<div class="col-md-3 text-center">
+														<h4> $13540 </h4>
+													</div>
+												</div>
+
 										</li>
-										<li class="page-item"><a class="page-link" href="#">3</a></li>
-										<li class="page-item">
-											<a class="page-link" href="#">Next</a>
-										</li>
+
 									</ul>
-								</nav>
+								</div>
 							</div>
-
 						</div>
+
 					</div>
 				</div>
 			</div>
@@ -278,7 +295,7 @@
 </main>
 </body>
 <footer class="text-light">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-3 col-lg-4 col-xl-3">
           <h5>About</h5>
