--- a/register-login.html
+++ b/register-login.html
@@ -13,80 +13,82 @@
 </head>
 
 <body>
+<div class="fixed-top">
+	<nav class="top-menu">
+		 <div class="container-fluid">
+			 <div class="row">
+				 <div class="col-sm-4 hidden-xs">
+					 <span class="nav-text">
+						 <i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
 
-	 <nav class="top-menu">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-4 hidden-xs">
-            <span class="nav-text">
-              <i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
+					 </div>
+					 <div class="col-sm-3 text-center">
 
-            </div>
-            <div class="col-sm-3 text-center">
-
-            </div>
-        <div class="col-sm-5 text-right hidden-xs">
-              <ul class="right-menu ">
-              <li><a href=""><i class="fas fa-question-circle"></i></a></li>
-                <li class="dropdown">
-                 <a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
-               </li>
-               <li class="dropdown">
-                 <a class="" href="#"> Login/Register</a>
-               </li>
-               <li style="background-color:#048949;"><a  href="cart.html">
-                 <i class="fas fa-cart-plus"></i> Cart
-                 <span class="badge  badge-cart ">10</span>
-               </a></li>
-
-
-             </ul>
-           </div>
-         </div>
-       </div>
-     </nav>
-		 <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-       <div class="container">
-         <!--logo -->
-         <a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-           <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse justify-content-center"  id="navbarsExampleDefault">
-           <form style="">
-             <div class="row" style="margin-top:10px;">
-               <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                 <div class="input-group input-group-sm">
-                   <input style="border-radius:0;" type="text" class="form-control" aria-label="Small" placeholder="Search...">
-                   <div class="input-group-append">
-                     <button type="button" class="btn btn-secondary" style="border-radius:0;">
-                       <i class="fa fa-search"></i>
-                     </button>
-                   </div>
-                 </div>
-               </div>
-             </div>
-             <!-- Links -->
-             <ul class="navbar-nav m-auto" >
-               <li class="nav-item">
-                 <a class="nav-link  active" href="index.html">HOME <span class="sr-only">(current)</span></a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link " href="products.html">PRODUCTS</a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link" href="#">SERVICES </a>
-               </li>
-               <li class="nav-item">
-                 <a class="nav-link" href="#">APPLICATIONS</a>
-               </li>
-             </ul>
-           </form>
+					 </div>
+			 <div class="col-sm-5 text-right hidden-xs">
+						 <ul class="right-menu ">
+						 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
+							 <li class="dropdown">
+								<a class="" href="#"><i class="fas fa-user" aria-hidden="true"></i> My Account</a>
+							</li>
+							<li class="dropdown">
+								<a class="active" href="register-login.html"> Login/Register</a>
+							</li>
+							<li style="background-color:#048949;"><a  href="cart.html">
+								<i class="fas fa-cart-plus"></i> Cart
+								<span class="badge  badge-cart ">10</span>
+							</a></li>
 
 
-         </div>
-       </div>
-     </nav>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</nav>
+		<nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+			<div class="container-fluid">
+				<!--logo -->
+				<a class="navbar-brand" href="#"><img src="img/logo-cube-mia.png" style="max-width:130px;" /></a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse justify-content-center"  id="navbarsExampleDefault">
+					<form style="">
+						<div class="row" style="margin-top:10px;">
+							<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+								<div class="input-group input-group-sm">
+									<input style="border-radius:0;" type="text" class="form-control" aria-label="Small" placeholder="Search...">
+									<div class="input-group-append">
+										<button type="button" class="btn btn-secondary" style="border-radius:0;">
+											<i class="fa fa-search"></i>
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+						<!-- Links -->
+						<ul class="navbar-nav m-auto" >
+							<li class="nav-item">
+								<a class="nav-link" href="index.html">HOME <span class="sr-only">(current)</span></a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link " href="products.html">PRODUCTS</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">SERVICES </a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link" href="#">APPLICATIONS</a>
+							</li>
+						</ul>
+					</form>
+
+
+				</div>
+			</div>
+		</nav>
+</div>
+
 
 <main class="wrap">
 <div class="container">
@@ -392,7 +394,7 @@
 </body>
 
 <footer class="text-light">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-3 col-lg-4 col-xl-3">
           <h5>About</h5>
