--- a/products.html
+++ b/products.html
@@ -221,7 +221,7 @@
 										<li ng-repeat="ProductCardsItem in ProductCards" class="list-group-item">
 											<div class="row">
 												<div class=" col-md-3">
-													<img class="media-object img-rounded img-responsive" src="http://placehold.it/140x140" alt="placehold.it/350x250">
+													<img class="media-object img-rounded img-responsive" src="http://placehold.it/140x140" alt="image-products-cube" width="140" height="140">
 												</div>
 												<div class="col-md-6">
 													<h5> {{ProductCardsItem.NAME}} </h5>
