--- a/products.html
+++ b/products.html
@@ -175,7 +175,7 @@
       <input type="text" class="form-control" placeholder="max">
     </div>
 		<div class="col-md-3">
-      <button type="submit" class="btn btn-secondary">></button>
+      <button type="submit" class="btn btn-secondary"><i class="fas fa-angle-right"></i></button>
     </div>
 		<div>
 
