--- a/login.html
+++ b/login.html
@@ -17,15 +17,13 @@
 	<nav class="top-menu">
 		 <div class="container-fluid">
 			 <div class="row">
-				 <div class="col-sm-4 hidden-xs">
+				 <div class="col-xs-12 col-sm-4 col-md-6 col-lg-6">
 					 <span class="nav-text">
 						 <i class="fas fa-phone" aria-hidden="true"></i>   + 786-293-3272
 
 					 </div>
-					 <div class="col-sm-3 text-center">
-
-					 </div>
-			 <div class="col-sm-5 text-right hidden-xs">
+			
+			 <div class="col-xs-12 col-sm-8 col-md-6 col-lg-6 text-right">
 						 <ul class="right-menu ">
 						 <li><a href=""><i class="fas fa-question-circle"></i></a></li>
 							 <li class="dropdown">
